    - Removed unnecessary --status-sort-dl option.
    - Added STATUS_OUTPUT_FILE so the --Status and --Analyze output is
      captured instead of just being lost if the output was not piped to
      'less' or another similar program.
    - Added --restrict-ip so that psad will restrict its attack detection
      operations to a specific IP or network.

psad-1.4.8 (10/15/2006):
    - Added the ability to get the auto-blocking status for a specific IP
      address in --status-ip mode.
    - Bugfix to use the IPT_OUTPUT_FILE and IPT_ERROR_FILE configuration
      variables.
    - Bugfix to restore "start" functionality in Gentoo init script.
    - Added the ability to selectively disable psad auto-blocking emails.
    - Added more rigorous IP matching regex from Sebastien J. (contributed
      originally for fwknop).

psad-1.4.7 (09/10/2006):
    - Completely re-worked IPTables::ChainMgr to support the return of
      iptables error messages that are collected via stderr.  This is critical
      to fixing a bug where psad would sometimes die on an iptables command
      but no information would be returned to the user.
    - Added the ability to specify the position for both the jump rule into
      the psad chains as well as the position for new rules within the psad
      chains via the -I argument to iptables.  This fixes a bug where the user
      was given the impression that the IPTABLES_AUTO_RULENUM would accomplish
      this.
    - Populated the _debug option in the IPTables::ChainMgr module, and also
      added a _verbose option so that the specific iptables commands can
      actually be seen as IPTables::ChainMgr functions are called.
    - Added code to install.pl to ask the user if a manual restart of syslog
      is ok upon an unsuccessful test of the syslog reconfiguration.  This
      fixes a bug where some syslog daemons might not re-import their
      configurations after receiving a HUP signal.