@@ -97,6 +97,8 @@ psad-2.0 (12//2006):
       'less' or another similar program.
     - Added --restrict-ip so that psad will restrict its attack detection
       operations to a specific IP or network.
+    - Updated psadwatchd.c to parse EMAIL_ADDRESSES out of
+      /etc/psad/psad.conf to avoid duplication of variables.
 
 psad-1.4.8 (10/15/2006):
     - Added the ability to get the auto-blocking status for a specific IP
